--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -20,7 +20,7 @@
   </tbody>
 </table>
 </div>
-<div *ngIf="!isLoaded" class="loaded">
+<div *ngIf="isLoaded" class="loaded">
   <i class="fa fa-spinner fa-pulse fa-4x fa-fw"></i>
   <span class="sr-only">Loading...</span>
 </div>
